# EvaAssistantDiscord

./: .editorconfig  .env.example  .gitignore  LICENSE  NOTICE.md  README.md  main.py  pyproject.toml  requirements.txt
deploy/lavalink/: application.yml.example  eva-lavalink.service.example
roseblade_bot/: __init__.py  air_alerts.py  alert_intel.py  audit_cog_commands.py  audit_cog_events.py  audit_cog_runtime.py  audit_definitions.py  audit_logger.py  audit_snapshots.py  bot.py  chat_banter.py  config.py  formatters.py  message_handlers.py  phrases.py  pubg_lookup.py  server_banner.py  special_dm.py  steam_digest.py  storage.py  voice_guard.py  voice_handlers.py  war_monitor.py
roseblade_bot/assets/: ukraine_alert_regions.LICENSE
roseblade_bot/audit/: __init__.py  constants.py  dispatcher.py  history.py  models.py  renderer.py
roseblade_bot/cogs/: __init__.py  commands.py  core.py  events.py  music.py  shared.py
roseblade_bot/locales/: chat_banter.toml  ru.toml
roseblade_bot/music/: __init__.py  lavalink_config.py  phrases.py  service.py
roseblade_bot/services/: __init__.py  http.py
tests/: test_air_alerts.py  test_chat_banter.py  test_config.py  test_music_lavalink_config.py  test_music_service.py  test_special_dm.py  test_war_monitor.py
