[project]
name = "eva-assistant-discord"
version = "0.2.0"
description = "Discord-бот для красивых аудит-логов, стримов, AutoMod и саунд-панели от Steve Dogs Studio."
readme = "README.md"
requires-python = ">=3.12"
authors = [
  { name = "Steve Dogs Studio", email = "istevedogs@gmail.com" }
]
dependencies = [
  "discord.py>=2.7,<3.0",
  "Pillow>=10,<12"
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
